--- a/src/Zeus.Orders.API/Zeus.Orders.API.csproj
+++ b/src/Zeus.Orders.API/Zeus.Orders.API.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="../Zeus.Orders.Shared/Zeus.Orders.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
