--- a/src/Zeus.Orders.Inventory.Worker/Zeus.Orders.Inventory.Worker.csproj
+++ b/src/Zeus.Orders.Inventory.Worker/Zeus.Orders.Inventory.Worker.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Confluent.Kafka" Version="2.12.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="../Zeus.Orders.Shared/Zeus.Orders.Shared.csproj" />
+  </ItemGroup>
 </Project>
