--- a/src/Zeus.Orders.API/appsettings.Development.json
+++ b/src/Zeus.Orders.API/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "Kafka": {
-    "BootstrapServers": "localhost:9092"
+    "BootstrapServers": "localhost:9092",
+    "OrderPlacedTopic": "order-placed"
   }
 }
